Add groups and publicAccess to PipelineDefinition and check for these acls #214